# SimpleMon

./: .gitignore  .travis.yml  1  CMakeLists.txt  FindBotan.cmake  README.md  install-client.sh  install-server.sh
config/: client.conf  server.conf  sql.conf
include/SimpleMon/: config.h  msg.h  ssl_handler.h  ssl_socket.h
include/SimpleMon/client/: client.h  socket_client.h  ssl_client.h
include/SimpleMon/server/: alerts.h  server.h  socket_server.h  sql_handler.h  ssl_server.h
src/: config.cpp  socket_utils.cpp  ssl_handler.cpp  ssl_socket.cpp
src/client/: client.cpp  socket_client.cpp  ssl_client.cpp
src/server/: alerts.cpp  server.cpp  socket_server.cpp  sql.cpp  sql_handler.cpp  ssl_server.cpp
